homework/7.advanced-abstractions/service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  clusterIP: None
  ports:
    - name: amqp
      protocol: TCP
      port: 9090
      targetPort: 9090
    - name: admin
      protocol: TCP
      port: 15672
      targetPort: 15672
  selector:
    app: prometheus
